--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
-  "name": "next-pizza",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "next-pizza",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prismaformat": "npx prisma format",
+		"prisma:push": "prisma db push",
+		"prisma:seed": "prisma db seed"
+	},
+	"prisma": {
+		"seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.6.0",
+		"@radix-ui/react-checkbox": "^1.1.5",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-select": "^2.1.7",
+		"@radix-ui/react-slider": "^1.2.4",
+		"@radix-ui/react-slot": "^1.2.0",
+		"@types/bcrypt": "^5.0.2",
+		"axios": "^1.8.4",
+		"bcrypt": "^5.1.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.492.0",
+		"next": "15.3.1",
+		"prisma": "^6.6.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-use": "^17.6.0",
+		"tailwind-merge": "^3.2.0",
+		"ts-node": "^10.9.2",
+		"tw-animate-css": "^1.2.5",
+		"vaul": "^1.1.2",
+		"zustand": "^5.0.3"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.3.1",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
