--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-slider": "^1.2.4",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@types/bcrypt": "^5.0.2",
+		"@types/qs": "^6.9.18",
 		"axios": "^1.8.4",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
 		"lucide-react": "^0.492.0",
 		"next": "15.3.1",
 		"prisma": "^6.6.0",
+		"qs": "^6.14.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-use": "^17.6.0",
